[package]
name = "LangeMemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"]}
tokio = { version = "1.*", features = ["rt-multi-thread", "macros"]}
